--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "echarts": "4.1.0"
   },
   "browserslist": [
     "> 1%",
