--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "top-ui",
+  "name": "topband-vue-ui",
   "description": "An ui project base on Vue.js ",
   "version": "1.0.0",
   "author": "david.deng <dengfd88@163.com>",
